Fix scrollbar shifting layout

--- a/app/styles/common.css
+++ b/app/styles/common.css
@@ -8,7 +8,6 @@
 	html {
 		color-scheme: light dark;
 		accent-color: var(--color-text-accent);
-		scrollbar-gutter: stable;
 		scroll-padding-top: var(--layout-sticky-top);
 	}
 
